fixed htaccess for 3C and news.js so it works again

--- a/projects-and-initiatives.html
+++ b/projects-and-initiatives.html
@@ -110,7 +110,7 @@
         <h2 class="vpr-page-title">Projects & Initiatives</h2>
         <p>We host five large projects & initiatives that focus on creating opprotunities for university wide collaboration. </p>
         <ul>
-          <li><a href="http://www.virginia.edu/vpr/3Cavaliers/"><strong>3 Cavaliers</strong></a> provides support for interdisciplinary groups to explore creative, high-risk, high-payoff interdisciplinary research ideas that might not be ready for more traditional funding.</li>
+          <li><a href="https://3c.virginia.edu"><strong>3 Cavaliers</strong></a> provides support for interdisciplinary groups to explore creative, high-risk, high-payoff interdisciplinary research ideas that might not be ready for more traditional funding.</li>
           <li><a href="http://entrepreneurship.virginia.edu/"><strong>Entrepreneurship at UVA</strong></a> focuses on creating concepts for possible new products to develop, market and eventaully launch. </li>
           <li><a href="http://www.virginia.edu/vpr/docs/MaxPlackPartnershipFinal.pdf"><strong>The Max Planck Society  partnership with UVA</strong></a> conducts research on new energy processes. </li>
           <li><a href="http://opengrounds.virginia.edu/mission"><strong>OpenGrounds</strong></a> connects the University, the Charlottesville community, and global partners to develop the knowledge, tools, and behaviors that will shape the future.</li>
