--- a/resources-for-researchers/internalfund.html
+++ b/resources-for-researchers/internalfund.html
@@ -112,13 +112,13 @@
       <a href="#bankard">
       <h3 class="bbb">Bankard</h3>
       </a> <a href="#emeritus">
-      <h3 class="bbb">Emeritus Small Research/Travel Grants</h3>
+      <h3 class="bbb">Emeritus Research Grants</h3>
       </a> <a href="#interim">
       <h3 class="bbb">Interim Lab</h3>
       </a> <a href="#matching">
       <h3 class="bbb">Matching Funds</h3>
       </a> <a href="#research">
-      <h3 class="bbb">Research Support for the Arts, Humanities, and Social Sciences</h3>
+      <h3 class="bbb">Research Support for the Arts & Humanities</h3>
       </a> <a href="#small">
       <h3 class="bbb">Small Grants/Travel Grants</h3>
       </a> <!-- InstanceEndEditable --></div>
