--- a/news-archive.html
+++ b/news-archive.html
@@ -110,6 +110,9 @@
 		    <h2 class="vpr-page-title">News Archive</h2>
 					<p>Top news from the Office of the Vice President for Research at the University of Virginia. <a href="http://virginia.us6.list-manage.com/subscribe?u=ad59b4c4385511a9ec177859c&id=16860b7f9e"></p><p><strong>Subscribe</strong></a> to recieve updates. View past updates below.</p>
 					<ul id="archive-list">
+						<li><a href="https://mailchi.mp/16dfa7a291d1/uva-research-new-noteworthy-may-1019177?e=72949e609c">July 2018</a></li>
+						<li><a href="https://us6.campaign-archive.com/?u=ad59b4c4385511a9ec177859c&id=f9ea0bbf34">June 2018</a></li>
+						<li><a href="https://mailchi.mp/29316283d5fe/uva-research-new-noteworthy-may-1005513?e=ae7c216202">May 2018</a></li>
 						<li><a href="https://mailchi.mp/9a2571907988/uva-research-new-noteworthy-may-998853?e=72949e609c">April 2018</a></li>	
 						<li><a href="https://mailchi.mp/752eac2d03f8/uva-research-new-noteworthy-may-992001?e=72949e609c">March 2018</a></li>	
 						<li><a href="https://mailchi.mp/44f00d3a8b8a/uva-research-new-noteworthy-may-985885?e=72949e609c">February 2018</a></li>	
