--- a/news.html
+++ b/news.html
@@ -109,7 +109,7 @@
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
 		  <div class="main-content">
 		    <h2 class="vpr-page-title">News</h2>
-		    <p >Below is a collection of articles related to research at UVA. Articles are updated monthly with the release of our <a href="http://virginia.us6.list-manage.com/subscribe?u=ad59b4c4385511a9ec177859c&id=16860b7f9e">monthly newsletter</a>. To gain a better understanding check out our recent news and publications. For up to date information about VPR news, <a href="http://virginia.us6.list-manage.com/subscribe?u=ad59b4c4385511a9ec177859c&id=16860b7f9e">subscribe to our mailing list</a>.</p>
+		    <p >Below is a collection of articles related to research at UVA. Articles are updated monthly with the release of our <a href="http://virginia.us6.list-manage.com/subscribe?u=ad59b4c4385511a9ec177859c&id=16860b7f9e">monthly newsletter which you can subscribe to receive through email</a>. If you're looking for an older publication, you can explore our <a href="http://www.virginia.edu/vpr/news-archive.html">news archive</a>.</p>
 		    
 		    <div class="row">
 		    	<div class="col-sm-6 vpr-callout">
@@ -123,7 +123,7 @@
 				</div>
 		    	<div class="col-sm-6 vpr-callout">
 					<h3 class="vpr-callout">Past Newsletters</h3>
-					<p>We keep an <a href="news-archive.html">archive of all our old newsletters</a>.</p>
+					<p>We keep an <a href="news-archive.html">archive of all our past newsletters</a>.</p>
 				  	<a href="http://virginia.us6.list-manage.com/subscribe?u=ad59b4c4385511a9ec177859c&id=16860b7f9e" class="btn btn-primary">Subscribe to Mailing List</a>
 					<p></p>
 					<a href="news-archive.html" class="btn btn-primary">View News Archive</a>  
