Onboarding worked on

--- a/resources-for-researchers/faculty-onboarding.html
+++ b/resources-for-researchers/faculty-onboarding.html
@@ -108,12 +108,65 @@
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
         <h2 class="vpr-page-title">New Faculty Onboarding</h2>
-        <p>Coming Soon...</p>
+        <p>The Office of the Vice President for Research (VPR) is responsible for the integration and enhancement of research activities across UVA’s eleven schools and multiple research institutes and centers. VPR leads university-wide strategic growth activities, coordinates the various University units that comprise the research infrastructure, including research funding, the planning and development of academic research space, research commercialization, the incubation of new companies and recruiting of corporate research partners to local research parks, and public outreach. We collaborate with other areas of the University to assist researchers to ease their administrative burden and enable their research. Let us know how we can help you!</p>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" --> 
+<div class="container-fluid">
+  <div class="main-content">
+    <div class="row dotted">
+      <h3>General Information</h3>
+      <p>These are the links and information that everybody needs to know. All new employees and researchers need to go through this information and complete some hosekeeping tasks to make starting research a smoother process.</p>
+      <div class="onboarding-info">
+        <h4>Finding your way</h4>
+        <div><a href="http://www.virginia.edu/webmap/">The Interactive Map</a> is a easy way to locate information on places on UVA Grounds.</div>
+        <h4>Sign the Patent Agreement</h4>
+        <div>Everyone needs to <a href="https://lvg.virginia.edu/innovators/patent-agreement-and-assignment-instructions">sign the Patent Agreement.</a> This only takes a few minutes. Login with Netbadge.</div>
+        <h4>Export Controls</h4>
+        <div>Supports university activities that are subject to US export control or sanction regulations. <a href="http://export.virginia.edu/">Learn more.</a></div>
+        <h4>Spnsored Programs</h4>
+        <div>Pre- and post-award support; contract negotiation (funded and non-funded); electronic research administration platform; and institutional data on sponsored activities. <a href="http://sponsoredprograms.virginia.edu/">Learn more.</a></div>
+        <h4>Procurment</h4>
+        <div>Procurement Purchasing; travel and expense management; and University payment (credit) cards. <a href="http://www.procurement.virginia.edu/">Learn more.</a></div>
+        <h4>Research Conflict of Interest</h4>
+        <div>A COI investigator is any individual, regardless of title, role or position, who is responsible for the design, conduct, or reporting of research on a proposal to a relevant federal agency/under a relevant solicitation. <a href="http://www.virginia.edu/vpr/Compliance/COI.html">All investigators need to complete a disclosure and training.</a>
+          <ul>
+            <li>Disclosure must be filed every 12 months (yearly) and is required to Submit for external funding and on all active awards.</li>
+            <li>Training must be completed every 4 years and is required when the award is Funded. You must complete this training before they set up your account and must be current during dates of the award.</li>
+          </ul>
+        </div>
+      </div>
+      <div class="dotted">
+        <h3><a href="http://www.virginia.edu/vpr/Compliance/index.html">Research Compliance & Ethics</a></h3>
+        <div class="onboarding-info">
+          <h4>Do you work with animals?</h4>
+          <div>If you will be using animals for research, testing, or teaching at UVA, check out this link for a good place to start. The IACUC Office, or ACUC Office as it’s called at UVA, is always here to help you find your way through the maze. Please feel free to contact us at any time. If you need to move animals here from another institution, please contact Sanford Feldman, Director, Comparative Medicine. You will need Institutional Animal Care and Use Committee (IACUC, ACUC) approval to order, possess, or conduct research using vertebrate animals. Their staff can help with protocol development, protocol pre-review, and required training for you and your laboratory staff. Such transfers usually are made under a Material Transfer Agreement between your current institution and UVA. <a href="http://www.virginia.edu/vpr/iacuc/new.html">Learn out more about Animal Care and Use.</a>
+            <div class="col-sm-10 vpr-callout">
+              <h3 class="vpr-callout">Contact</h3>
+              <div class="col-sm-6">
+                <div class="bold">Sanford Feldman</div>
+                <div>Director, Comparative Medicine</div>
+                <div>434.924.5058</div>
+                <div>shf2b@virginia.edu</div>
+              </div>
+              <div class="col-sm-6">
+                <div class="bold">ACUC Office</div>
+                <div>Institutional Animal Care and Use Committee</div>
+                <div>434.924.0405</div>
+                <div>acuc@virginia.edu</div>
+              </div>
+            </div>
+          </div>
+          <div class="row"></div>
+          <h4>Do you work with controlled substances?</h4>
+          <div>If you will be using controlled substances you will need to acquire a license. The Drug Enforcement Administration (DEA) and Virginia Board of Pharmacy (VBP) require that all locations which store Controlled Substances (CS) for use in research must be registered with both the DEA and VBP, and adhere to the other regulations regarding procurement, record keeping, administration (to animals or in vitro), and destruction. <a href="http://www.virginia.edu/vpr/ControlledSubstances/">Learn more about Controlled Substance.</a></div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
