--- a/ControlledSubstances/applications.html
+++ b/ControlledSubstances/applications.html
@@ -114,7 +114,7 @@
           </div>
           <div class="col-sm-2"></div>
           <div class="col-sm-5">
-            <h4>Schedule 4 Only</h4>
+            <h4>Schedule VI Only</h4>
             <p>VBP Controlled Substance Registration (CSR) Certificate</p>
           </div>
         </div>
