external fund link change

--- a/resources-for-researchers/research-development.html
+++ b/resources-for-researchers/research-development.html
@@ -118,7 +118,7 @@
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
-      <div class="col flex-wrapper flex-wrapper-fourths"> <a href="http://www.virginia.edu/vpr/Research%20Development/externalfund.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0063_aidan-bartos-313782.png">
+      <div class="col flex-wrapper flex-wrapper-fourths"> <a href="externalfund.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2_0063_aidan-bartos-313782.png">
         <div class="description">
           <p class="description_content">External Funding</p>
         </div>
