--- a/resources-for-researchers/faculty-onboarding.html
+++ b/resources-for-researchers/faculty-onboarding.html
@@ -121,7 +121,9 @@
       <h3>General Information</h3>
       <p>These are the links and information that everybody needs to know. All new employees and researchers need to go through this information and complete some hosekeeping tasks to make starting research a smoother process.</p>
       <div class="onboarding-info">
-        <h4>Getting your UVA ID</h4>
+        <h4>Connect with Human Resources</h4>
+        <div>If you haven't already signed up for new employee orientation, talk with your department to get it scheduled. Orientation information and dirctions to HR exist on <a href="http://www.hr.virginia.edu/">the UVA Human Resources website.</a></div>
+        <h4>Get your UVA ID</h4>
         <div>Your computing ID will be your username when you login to many of the UVA services that exist behind Netbadge. It will will contain your initials, a numeral and one or two extra letters (E.g. mg9jd). It will be the begining portion of your default UVA email (E.g. mg9jd@virginia.edu). You can create an alias for your email later. Visit <a href="http://its.virginia.edu/guides/getstarted.html">Information Technology Services</a> to setup your UVA ID and password. You will need to know your UVA 9-Digit ID number which you can get from the office where you were hired. You may also get this number when you do your in person ID verification. If you already have your UVA 9 digit number you will still have to do an in person ID verification at Carruthers Hall. Bring some proof of your identity like a drivers license or government ID card.</div>
         <div class="col-sm-10 vpr-callout">
           <h5 class="vpr-callout">In Person Verification</h5>
@@ -136,21 +138,21 @@
           </div>
         </div>
         <div class="row"></div>
-        <h4>Getting your UVA password</h4>
+        <h4>Get your UVA password</h4>
         <div>To get your password, take <a href="https://quiz.its.virginia.edu/rcq">the Responsible Computing Tutorial</a> and make a note of your new Eservices password at the end, which will only be displayed for 2 minutes. When you click “Finish,” you’ll be sent to log in via NetBadge to finish your IT Security Awareness Tutorial. Provide your UVA computing ID and the new Eservices password you just received to log in and finished your Tutorial.</div>
         <h4>Setting up your UVA email</h4>
         <div>You can get an overview of how you create your primary email address and your computing ID <a href="http://its.virginia.edu/email/ams/aliases.html#createprimary">on the ITS website.</a></div>
-        <h4>Creating an alias for your UVA email</h4>
+        <h4>Create an alias for your UVA email</h4>
         <div>For an overview of how you create an email alias <a href="http://its.virginia.edu/email/ams/aliases.html#createv">visit the ITS website's section on aliases.</a> and then go to <a href="https://ams.itc.virginia.edu/">the Email Address Managment System</a> and select 'Manage Alaises'.</div>
         <h4>Obtaining your plastic UVA ID</h4>
         <div>You'll need <a href="http://www.virginia.edu/idoffice/pdfs/facstaffidform.pdf">to obtain a UVA ID card</a> or a Health System ID card if you are in School of Medicine or the Health System: Health System Employees who are required to wear a UVA Health System ID Badge will need to obtain one from the UVA Health System Technical Services. They are located in Room M1205 in the front corridor of the Multistory of the West Complex (old Hospital). Call 434-982-4009 or email for more information.</div>
-        <h4>Getting connected to the UVA Wireless Network</h4>
+        <h4>Connect to the UVA Wireless Network</h4>
         <div>On your device connect to the "Welcome_to_UVA_Wireless" network. Open a browser and you should be directed to the <a href="http://network-setup.itc.virginia.edu/setup_tool.html">UVA Network Setup Tool.</a> Then you'll download and run the tool for your operating system. It should automatically configure your access to the encrypted "Cavalier" network and install a personal certificate on your computer. You'll need your computing ID, password, and 9-digit UVA ID number. If you have problems, consult the <a href="http://www.its.virginia.edu/wireless/encrypted.html#troubleshooting">troubleshooting guide.</a> For mobile devices the setup may work with the cavalier network may fail. If that is the case you'll need to setup your mobile device on the wahoo network.</div>
-        <h4>Connecting a mobile device to the unencrypted wahoo wireless network</h4>
+        <h4>Connect a mobile device to the unencrypted wahoo wireless network</h4>
         <div>If you are unable to get your mobile device setup on the encrypted cavalier network you'll need to follow <a href="http://www.its.virginia.edu/wireless/device-unsupported-configure.html">this guide on how to connect to the wahoo network.</a> It requires you to register your mobile device on a computer and then complete the setup on your mobile device.</div>
-        <h4>Finding your way</h4>
+        <h4>Find your way around UVA</h4>
         <div><a href="http://www.virginia.edu/webmap/">The Interactive Map</a> is a easy way to locate information on places on UVA Grounds.</div>
-        <h4>Figuring out parking</h4>
+        <h4>Figure out parking</h4>
         <div>Nobody wants to get a ticket on their car. All information related to parking exists on the <a href="http://www.virginia.edu/parking/">Parking & Transportation website.</a> Most questions can be found on <a href="http://www.virginia.edu/parking/faq/index.html">their Parking FAQ page.</a> If you have been allotted a parking pass, you'll need to pick it up at the parking office.</div>
         <div class="col-sm-10 vpr-callout">
           <h5 class="vpr-callout">Parking Pass Pickup</h5>
@@ -180,9 +182,9 @@
         <h3>Required Forms & Payroll</h3>
         <p>All new employees are required to sign certain forms and documents in order to start working. Laid out below are most of the initial housekeeping tasks you need to complete in order to get started working.</p>
         <div class="onboarding-info">
-          <h4>Completing your tax froms</h4>
-          <div>You'll want to <a href="http://www.hr.virginia.edu/other-hr-services/cis/i-9-online-page/i-9-online-for-specialists/">complete part one of your I-9 online.</a> You may need to <a href="http://www.hr.virginia.edu/other-hrservices/CIS/i-9-online-page/i-9-online-for-employees/">visit the hr site to find the I-9 form online.</a> You will need to show your ID to the I-9 Specialist in your area to complete the second part.</div>
-          <h4>Getting setup with payroll</h4>
+          <h4>Complete your tax froms</h4>
+          <div>You'll want to <a href="http://www.hr.virginia.edu/other-hrservices/CIS/i-9-online-page/i-9-online-for-employees/">complete part one of your I-9 online.</a> You will need to show your ID to the I-9 Specialist in your area to complete the second part.</div>
+          <h4>Get setup with payroll</h4>
           <div>
             <ul>
               <li><a href="www.hr.virginia.edu">Sign-up for direct deposit using Employee Self-Service.</a> Select the SSTL link at the top of the page.</li>
