pull changes from live

--- a/Compliance/ComplianceTraining.html
+++ b/Compliance/ComplianceTraining.html
@@ -113,7 +113,7 @@
         <p>EHS offers extensive training. Please visit the EHS training site.</p>
         <h4>Institutional Review Board for Health Sciences Research (HSR &amp; SBS)</h4>
         <p> As of January 2007, the CITI Program satisfies U.Va.'s IRB online training requirement for investigators involved in human subject research.&nbsp; At U.Va., investigators involved in human subject research are required to take online training once every three years. </p>
-        <a href="http://ehs.virginia.edu/Radiation-Safety-Training.html">
+        <a href="http://ehs.virginia.edu/Training.html">
         <h3 class="bbb">EHS Training Site</h3>
         </a> <a href="http://www.virginia.edu/vpr/irb/hsr/citi.html">
         <h3 class="bbb">IRB Site</h3>
