--- a/index.html
+++ b/index.html
@@ -86,23 +86,21 @@
       </div>
       <div class="nav">
         <ul class="sidebar-nav">
-          <!-- InstanceBeginEditable name="SideNav" -->
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="contact.html">Contact & Directions</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="leadership.html">Leadership</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="staff.html">Staff</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="news.html">News</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
-            </li>
-          <!-- InstanceEndEditable -->
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="contact.html">Contact & Directions</a> </h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="leadership.html">Leadership</a> </h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="staff.html">Staff</a> </h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="news.html">News</a> </h2>
+          </li>
+          <li class="nav-item">
+            <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a> </h2>
+          </li>
         </ul>
       </div>
     </div>
@@ -126,17 +124,19 @@
 				<h3>Melur K. (Ram) Ramasubramanian</h3>
 				<h4>Vice President for Research</h4>
 				<p>Professor, Mechanical &amp; Aerospace Engineering<br><a href="mailto:rammk@virginia.edu">rammk@virginia.edu</a></p>
-				<a href="https://news.virginia.edu/content/melur-k-ramasubramanian-appointed-uva-vice-president-research" class="btn btn-primary">Read Full Bio</a><p></p>
+				<p>Melur K. “Ram” Ramasubramanian is serving as the Vice President for Research (VPR) and is responsible for the strategy and its execution for significantly growing the research enterprise at UVA through a strong partnership with the Provost and UVA’s eleven schools and multiple research centers. He leads university-wide strategic growth activities including the Pan-University institutes, explore-to-build initiatives, and the 3Cavaliers rapid seed funding initiative.  He manages various University units that comprise the research infrastructure, including the office of sponsored programs (OSP), the research development office that facilitates the acquisition of research funding, the licensing and ventures group for research commercialization and the incubation of new companies, as well as the offices for managing regulatory aspects of compliance and research safety. </p>
+				<a href="https://news.virginia.edu/content/melur-k-ramasubramanian-appointed-uva-vice-president-research" class="btn btn-primary">Read appointment article</a><p></p>
 			</div>
    		</div>
     </div>
     <div class="col-sm-3 vpr-callout">
       <h3 class="vpr-callout">By the Numbers</h3>
       <ul>
-        <li> Federal Funding: <em>$260m</em> </li>
-        <li> Total Research: <em>$338m</em> </li>
+          <li> Total Research: <em>$394M</em> </li>
+		  <em>Federal Funding: $312M</em> 
+        
       </ul>
-      <p>UVa’s total research funding $338 million, of which $260 million is federal research dollars.</p>
+      <p>UVA’s total research funding $393.8 million, of which $311.8 million is federal research dollars.</p>
       <p><a class="vpr-callout" href="vpr-web/assets/ResearchNumbersMay2016.pdf">Download the PDF</a></p>
     </div>
   </div>
