--- a/resources-for-researchers/discoveryvideoshowcase-alt-instructions.html
+++ b/resources-for-researchers/discoveryvideoshowcase-alt-instructions.html
@@ -9,7 +9,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Discover Video Showcase Submissions</title>
+<title>Discovery Video Showcase Submissions</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -107,12 +107,12 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Discover Video Showcase</h2>
+        <h2 class="vpr-page-title">Discovery Showcase</h2>
         <h4>Advanced Instructions</h4>
         <p>We invite researchers of all levels to create videos about their research that is intended for general audience on a wide-range of topics covering the spectrum of research and scholarship at UVA. Here are the submissions so far.</p>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h4>Videos depicting research and scholarship from all areas and disciplines welcome.</h4>
-        <p>If you don't have your own youtube channel and don't intend to make one please follow <a href="discoveryvideoshowcase.html"> the basic instructions found here.</a> The instructions below are for those that want their video hosted on their own independent youtube channel.</p>
+        <p>If you don't have your own youtube channel and don't intend to make one please follow <a href="discoveryvideoshowcase.html"> the basic instructions found here.</a> The instructions on this page are for those that want their video hosted on their own independent youtube channel.</p>
         <a href="discoveryvideoshowcase.html"><h3 class="bbb">Basic Instructions</h3></a>
       </div> 
       <!-- InstanceEndEditable --></div>
