--- a/resources-for-researchers/discoveryvideoshowcase.html
+++ b/resources-for-researchers/discoveryvideoshowcase.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Discover Video Showcase Submissions</title>
+<title>Discovery Video Showcase Submissions</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -108,7 +108,7 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Discover Video Showcase</h2>
+        <h2 class="vpr-page-title">Discovery Showcase</h2>
         <p>We invite researchers of all levels to create videos about their research that is intended for general audience on a wide-range of topics covering the spectrum of research and scholarship at UVA. Here are the submissions so far.</p>
         <iframe class="center" width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLlf42T0Kv6SpgaGoz6iLOzUfW8CoYgvMq" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         <h4>Videos depicting research and scholarship from all areas and disciplines welcome.</h4>
@@ -156,7 +156,8 @@
           </li>
           <li>Publish your video and send us your video link.</li>
         </ol>
-        <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScMy-F01DndfVsob6Yg9wjmza2OKhNip2PBboRwoaBMWno2oQ/viewform?embedded=true" width="640" height="1149" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>   
+        <iframe class="center" src="https://docs.google.com/forms/d/e/1FAIpQLScMy-F01DndfVsob6Yg9wjmza2OKhNip2PBboRwoaBMWno2oQ/viewform?embedded=true" width="640" height="1149" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <h3>Congrats! You're done. We'll add your video to the showcase.</h3>
       </div>
     </div>
   </div>
@@ -165,7 +166,7 @@
   <div class="main-content">
     <div class="row dotted"> 
       <div class="col">
-        <h2>Looking for more control over your video submission?</h2>
+        <h2>Optional - Looking for more control over your video submission?</h2>
         <p>Do you have your own youtube channel you'd like to post the video on? Do you want to improve your video with advanced youtube features like annotations, end cards, and subtitles? If so, please contact us by email or by using the form below. Taking advandtage of these additional features will require your research group to have their own youtube account and abide by some UVA rules. If this option interests your group, here are some of the pros and cons of submitting your video this way.</p> 
         <h5>Pros</h5>
         <ul>
@@ -179,7 +180,7 @@
           <li>Channel must be UVA/research branded - You can't post your video to your personal youtube channel. We don't want you uploading the showcase video to your personal youtube channel where if people click on the channel they will see your playlists of your favorite cat videos or music. The channel will have to be connected to your reserach and uva only. Take a look at the <a href="https://www.youtube.com/user/UniversityofVirginia">UVA youtube channel</a> and the <a href="https://www.youtube.com/channel/UCr8T8WcY1FzhLNng4HUBAYQ">Vice President for Research at UVA youtube channel</a> for examples of what is required of UVA branding. It's essentially just a UVA image as your profile image and a UVA or research related picture in your channel art. Most of what we're asking is that you don't have unrelated content cluttering your channel</li>
         </ul>
           <p>If you decide that you want to post the vidoe on your own channel please follow <a href="discoveryvideoshowcase-alt-instructions.html">these separate instructions.</a></p>
-        <a href="discoveryvideoshowcase-alt-instructions.html"><h3 class="bbb">Instructions for uploading to your own channel</h3></a>
+        <a href="discoveryvideoshowcase-alt-instructions.html"><h3 class="bbb">Optional instructions for uploading to your own channel</h3></a>
       </div>
     </div>
   </div>
