--- a/resources-for-researchers/research-development.html
+++ b/resources-for-researchers/research-development.html
@@ -126,11 +126,11 @@
         <div class="description">
           <p class="description_content">Internal Funding</p>
         </div>
-        </a> <a href="https://virginia.infoready4.com/#homePage/148" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0002_thomas-martinsen-2443.jpg">
+        </a> <a href="https://virginia.infoready4.com/limited-submissions" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/3-2-photos-batch3_0002_thomas-martinsen-2443.jpg">
         <div class="description">
           <p class="description_content">Limited Submissions</p>
         </div>
-        </a> <a href="http://www.virginia.edu/vpr/Research Development/researchnet.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0038_the-roaming-platypus-311630-unsplash.jpg">
+        </a> <a href="research-net.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0038_the-roaming-platypus-311630-unsplash.jpg">
         <div class="description">
           <p class="description_content">ResearchNet</p>
         </div>
